--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.SecondActivity"></activity>
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.ThirdActivity">
+        <activity android:name=".activity.ThirdActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
