--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
     package="com.example.androidtest">
 
     <application
+        android:name=".AndroidTest"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SecondActivity"></activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.ThirdActivity" />
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.SecondActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
