--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidtest">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".app.AndroidTest"
         android:allowBackup="true"
@@ -10,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.SecondActivity" />
         <activity android:name=".activity.ThirdActivity" />
-        <activity android:name=".activity.SecondActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
