--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.LoginPage"></activity>
         <activity android:name=".activity.SecondActivity" />
         <activity android:name=".activity.ThirdActivity" />
         <activity android:name=".activity.MainActivity">
