--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.RegisterActivity"></activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.SecondActivity" />
-        <activity android:name=".activity.ThirdActivity" />
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.DressChooser" />
+        <activity android:name=".activity.DressDetails" />
+        <activity android:name=".activity.Introduction">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
