--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.DressChooser" />
         <activity android:name=".activity.DressDetails" />
-        <activity android:name=".activity.Introduction">
+        <activity android:name=".activity.screens.introduction.IntroductionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
