--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.RegisterActivity"></activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.DressChooser" />
+        <activity android:name=".activity.screens.dresschooser.DressChooser" />
         <activity android:name=".activity.DressDetails" />
         <activity android:name=".activity.screens.introduction.IntroductionActivity">
             <intent-filter>
