--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.RegisterActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.screens.logreg.RegisterActivity"></activity>
+        <activity android:name=".activity.screens.logreg.LoginActivity" />
         <activity android:name=".activity.screens.dresschooser.DressChooser" />
         <activity android:name=".activity.DressDetails" />
         <activity android:name=".activity.screens.introduction.IntroductionActivity">
